--- a/templates/reservation/dashboad.html.twig
+++ b/templates/reservation/dashboad.html.twig
@@ -33,7 +33,7 @@
             document.addEventListener('DOMContentLoaded', () => {
                const calendar = new FullCalendar.Calendar(document.getElementById('calendar'), {
                    initialView: 'dayGridMonth',
-                   googleCalendarApiKey: 'AIzaSyCzAwHsbXlCDc0x4JpABuamQOtQ24oat8g',
+                   googleCalendarApiKey: '{{ googleCalendarApiKey }}',
                    eventSources: [
                        { googleCalendarId: '9426kqtpb8mr7b1aonjub21rgg@group.calendar.google.com' },
                        {% for cabane in cabanes %}
@@ -48,8 +48,9 @@
                        {% endfor %}
                    ],
                    eventClick: (info) => {
-                       console.log(info.event.display);
-                       info.jsEvent.preventDefault();
+                        info.jsEvent.preventDefault();
+                        const modal = new BSModal("{{ path('sauvabelin.apmbs_reservations.modal') }}?id=" + info.event.id);
+                        modal.launch();
                    },
                });
 
