global cleanup and adapt some apmbs stuff

--- a/templates/cabane/cabane_form.html.twig
+++ b/templates/cabane/cabane_form.html.twig
@@ -23,8 +23,6 @@
                                 {{ form_row(cabaneForm.fromEmail) }}
                                 {{ form_row(cabaneForm.googleFormUrl)}}
                                 {{ form_row(cabaneForm.calendarId) }}
-                                {{ form_row(cabaneForm.longitude) }}
-                                {{ form_row(cabaneForm.latitude) }}
                                 {{ form_row(cabaneForm.intendants) }}
                             </form>
                         </div>
@@ -61,6 +59,7 @@
                                 {{ form_row(cabaneForm.availabilityRule) }}
                                 {{ form_row(cabaneForm.timePeriods) }}
                                 {{ form_row(cabaneForm.prices) }}
+                                {{ form_row(cabaneForm.conditions) }}
                             </div>
                             <div id="received-email" class="tab-pane fade">
                                 {{ form_row(cabaneForm.receivedEmail) }}
