--- a/templates/cabane/cabane_page.html.twig
+++ b/templates/cabane/cabane_page.html.twig
@@ -35,6 +35,16 @@
                             </form>
                         </div>
                     </div>
+                     <div class="card mt-3">
+                        <div class="card-header">
+                            <h3 class="card-title">Réservations</h3>
+                        </div>
+                        <div class="card-body">
+                            <form class="form-horizontal">
+                               {{ render_list('app.apmbs.cabane.reservations', 'netbs', {cabaneId: cabane.id}) }}
+                            </form>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-8">
                     <div class="card">
